app/page.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 6rem;
  min-height: 100vh;
}

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 4rem 0;
}

.title {
  font-size: 1.5rem;
  line-height: 1;
  font-weight: 700;
  text-align: center;
  margin-top: 0.2rem;
  font-family: var(--font-orbitron);
}

.description {
  font-size: 1rem;
  font-weight: 200;
  text-align: center;
  margin-bottom: 2.5rem;
  font-family: var(--font-manrope);
}

.githubLink {
  position: fixed;
  top: 16px;
  right: 16px;
  opacity: 0.7;
  z-index: 100;
}

.logo {
  position: fixed;
  top: 14px;
  left: 18px;
  z-index: 100;
}

.githubImage {
  width: 32px;
  height: 32px;
}

.widget {
  height: unset;
}

/* Top navbar to block the widget when scrolling */
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 42px;
  background-color: #0a0a18;
  display: none;
  z-index: 1;

  &::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 2px;
    background-color: #0054bd70;
  }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) {
  .main {
    padding: 2rem;
  }

  .center {
    padding: 2rem 0 1rem;
  }

  .title {
    font-size: 1.2rem;
    margin-top: 0.2rem;
  }

  .description {
    font-size: 1rem;
    margin-bottom: 2.5rem;
  }
}

/* Mobile */
@media (max-width: 700px) {
  .widget {
    height: calc(100dvh - 42px);
  }

  .main {
    padding: 34px 0 0 0;
  }

  .center {
    padding: 0.5rem 0 0;
  }

  .center::before {
    transform: none;
    height: 300px;
  }

  .center > div {
    max-width: 100vw;
  }

  .title {
    font-size: 1.2rem;
    margin-top: 0;
  }

  .logo {
    top: 10px;
    left: 10px;
  }

  .description {
    font-size: 0.9rem;
    margin-bottom: 2rem;
    display: none;
  }

  .githubLink {
    position: fixed;
    top: 8px;
    right: 8px;
    opacity: 0.7;
  }

  .githubImage {
    width: 24px;
    height: 24px;
  }

  .navbar {
    display: block;
  }
}

